# Workspace containing all RPFM crates.
[workspace]
resolver = "2"
members = [
    # Libs
    "rpfm_lib",
    "rpfm_extensions",
    "rpfm_ui_common",

    # Executables
    "rpfm_cli",
    "rpfm_ui",
]

[workspace.package]
version = "4.2.5"
authors = ["Frodo45127 <frodo_gv@hotmail.com>"]
rust-version = "1.67"
edition = "2021"

[profile.dev]
incremental = true
opt-level = 3         #For performance debugging, check this. Makes compile times longer, but it gives way more accurate-with-release speeds.

[profile.release]
lto = true
debug = true
