# Workspace containing all RPFM crates.
[workspace]
resolver = "2"
members = [
    # Libs
    "rpfm_lib",
    "rpfm_extensions",
    "rpfm_ipc",
    "rpfm_ui_common",

    # Executables
    "rpfm_cli",
    "rpfm_server",
    "rpfm_ui",
]

[workspace.package]
version = "4.7.3"
authors = ["Frodo45127 <frodo_gv@hotmail.com>"]
rust-version = "1.80"
edition = "2021"

[profile.dev]
incremental = true
#opt-level = 3         #For performance debugging, check this. Makes compile times longer, but it gives way more accurate-with-release speeds.

[profile.release]
lto = true
debug = true

[workspace.dependencies]
# Internal workspace dependencies.
rpfm_lib = { path = "rpfm_lib", version = "4.7.3" }
rpfm_extensions = { path = "rpfm_extensions", version = "4.7.3" }
rpfm_ui_common = { path = "rpfm_ui_common" }
rpfm_ipc = { path = "rpfm_ipc" }

# Common dependencies.
anyhow = "^1"
base64 = "^0"
bincode = "^1.3"
cpp_core = "^0.6"
crossbeam = "^0.8"
csv = "^1.1"
directories = "^6.0"
float_eq = "^1"
futures = "^0.3"
getset = "^0.1"
itertools = "^0.14"
open = "^5"
qt_core = "^0.5"
qt_gui = "^0.5"
qt_ui_tools = "^0.5"
qt_widgets = "^0.5"
rayon = "^1.3"
regex = "^1"
reqwest = "^0.12"
ron = "^0.8"
self_update = { version = "^0.42", features = ["archive-zip", "compression-zip-deflate", "compression-zip-bzip2", "compression-flate2"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
thiserror = "^2"
tempfile = "^3.1"
time = { version = "^0.3", features = ["formatting"] }
toml = "^0.8"
tokio = { version = "^1", features = ["full"] }
winres = "^0.1"
zip-extract = "^0.2"
fs_extra = "^1.3"
caseless = "^0.2"
half = "^2"

# Windows resources support.
[workspace.target.'cfg(windows)'.build-dependencies]
winres = "^0.1"
