# Workspace containing all RPFM crates.
[workspace]
resolver = "2"
members = [
    # Libs
    "rpfm_lib",
    "rpfm_extensions",
    "rpfm_ipc",
    "rpfm_telemetry",
    "rpfm_ui_common",

    # Executables
    "rpfm_server",
    #"rpfm_gpui",
    "rpfm_ui",
]

# Fix clippy trying to compile ritual.
exclude = ["3rdparty"]

[workspace.package]
version = "4.7.110"
authors = ["Frodo45127 <frodo_gv@hotmail.com>"]
rust-version = "1.85"
edition = "2021"

[profile.dev]
incremental = true
#opt-level = 3         #For performance debugging, check this. Makes compile times longer, but it gives way more accurate-with-release speeds.

[profile.dev.package.qt_core]
opt-level = 0
codegen-units = 256

[profile.dev.package.qt_gui]
opt-level = 0
codegen-units = 256

[profile.dev.package.qt_widgets]
opt-level = 0
codegen-units = 256

[profile.release]
lto = "thin"
debug = true

[profile.release.package.qt_core]
codegen-units = 16

[profile.release.package.qt_gui]
codegen-units = 16

[profile.release.package.qt_widgets]
codegen-units = 16

[workspace.dependencies]
# Internal workspace dependencies.
rpfm_lib = { path = "rpfm_lib", version = "4.7.110" }
rpfm_extensions = { path = "rpfm_extensions", version = "4.7.110" }
rpfm_ui_common = { path = "rpfm_ui_common" }
rpfm_ipc = { path = "rpfm_ipc" }
rpfm_telemetry = { path = "rpfm_telemetry" }

# Common dependencies.
anyhow = "^1"
base64 = "^0"
bitcode = { version = "^0.6", features = ["serde"] }
cpp_core = { path = "3rdparty/src/ritual/cpp_core" }
crossbeam = "^0.8"
csv = "^1.1"
directories = "^6.0"
float_eq = "^1"
futures = "^0.3"
getset = "^0.1"
image = "^0.25"
itertools = "^0.14"
log = { version = "^0.4", features = ["std"] }
open = "^5"
qt_core = { path = "3rdparty/src/ritual/output/out/qt_core" }
qt_gui = { path = "3rdparty/src/ritual/output/out/qt_gui" }
qt_ui_tools = { path = "3rdparty/src/ritual/output/out/qt_ui_tools" }
qt_widgets = { path = "3rdparty/src/ritual/output/out/qt_widgets" }
rayon = "^1.3"
regex = "^1"
reqwest = { version = "^0.13", features = ["blocking", "json"] }
ron = "0.8"
self_update = { version = "^0.42", features = ["archive-zip", "compression-zip-deflate", "compression-zip-bzip2", "compression-flate2"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
thiserror = "^2"
tempfile = "^3.1"
time = { version = "^0.3", features = ["formatting"] }
toml = "^0.9"
tokio = { version = "^1", features = ["full"] }
winres = "^0.1"
zip = { version = "^8", default-features = false, features = ["deflate"] }
fs_extra = "^1.3"
caseless = "^0.2"
half = "^2"
rmcp = { version = "0.12", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
schemars = "1.0"
