[package]
name = "rpfm"
version = "3.0.5"
build = "build.rs"
authors = ["Frodo45127 <frodo_gv@hotmail.com>"]
description = "Launcher of RPFM, to allow autorestarting on update."
edition = "2021"
rust-version = "1.56"

# Windows resources support.
[target.'cfg(windows)'.build-dependencies]
winres = "^0.1"
