[package]
name = "rpfm"
build = "build.rs"
description = "Launcher of RPFM, to allow autorestarting on update."

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# Windows resources support.
[target.'cfg(windows)'.build-dependencies]
winres = "^0.1"
