[package]
name = "rpfm_cli"
build = "build.rs"
description = "A CLI tool to automate all your modding needs."

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]

# Internal dependencies.
rpfm_lib = { path = "../rpfm_lib", features = ["integration_log"] }
rpfm_extensions = { path = "../rpfm_extensions" }

# Error managing.
anyhow = "1.0"

# CLI parsing, formatting and color support.
clap = { version = "^4", features = ["derive", "wrap_help"] }

# Serialize support.
serde = "^1.0"
csv = "^1.1"

# Multithread iterator support.
rayon = "^1.3"

# Windows resources support.
[target.'cfg(windows)'.build-dependencies]
winres = "^0.1"
