[package]
name = "rpfm_cli"
build = "build.rs"
description = "A CLI tool to automate all your Total War modding needs."
license = "MIT"
repository = "https://github.com/Frodo45127/rpfm"
categories = ["command-line-utilities", "games"]
keywords = ["totalwar", "modding", "cli"]
readme = "README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]

# Internal dependencies.
rpfm_lib = { path = "../rpfm_lib", version = "4.0.14", features = ["integration_log", "integration_git"] }
rpfm_extensions = { path = "../rpfm_extensions", version = "4.0.14" }

# Error managing.
anyhow = "1.0"

# Config dependencies.
directories = "^5.0"
lazy_static = "^1.2"

# CLI parsing, formatting and color support.
clap = { version = "^4", features = ["derive", "wrap_help"] }

# Serialize support.
serde = "^1.0"
csv = "^1.1"

# Multithread iterator support.
rayon = "^1.3"

# Windows resources support.
[target.'cfg(windows)'.build-dependencies]
winres = "^0.1"
