[package]
name = "rpfm_cli"
build = "build.rs"
description = "A CLI tool to automate all your Total War modding needs."
license = "MIT"
repository = "https://github.com/Frodo45127/rpfm"
categories = ["command-line-utilities", "games"]
keywords = ["totalwar", "modding", "cli"]
readme = "README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]

# Internal dependencies.
rpfm_lib = { workspace = true, features = ["integration_log", "integration_git"] }
rpfm_extensions = { workspace = true }

# Error managing.
anyhow.workspace = true

# Config dependencies.
directories.workspace = true

# CLI parsing, formatting and color support.
clap = { version = "^4", features = ["derive", "wrap_help"] }

# Serialize support.
csv.workspace = true

# Multithread iterator support.
rayon.workspace = true

# Windows resources support.
[target.'cfg(windows)'.build-dependencies]
winres.workspace = true
