[package]
name = "rpfm_common"
version = "3.0.6"
authors = ["Frodo45127 <frodo_gv@hotmail.com>"]
description = "Lib with all the common functions and utils used by all the RPFM crates."
edition = "2021"
rust-version = "1.56"

[lib]
# Disable doctest, as we have none of them but still `cargo test` tries to execute `RON` code as doctests, and fails.
doctest = false

[dependencies]
rpfm_macros = { path = "../rpfm_macros" }
rpfm_logging = { path = "../rpfm_logging" }

# Serialization support.
serde = "^1.0"
serde_derive = "^1.0"
ron = "^0.7"
csv = "^1.1"

# Error handling.
anyhow = "^1.0"
thiserror = "1.0"

# Decoding/Encoding support.
byteorder = "^1.3"
encoding = "^0.2"

# Date manipulation support.
chrono = "^0.4"

# Git support.
git2 = "^0.13"

# Pelite, because we need it to get the current version of a game's exe, and I have not a fucking clue how to pass a path to WinApi.
pelite = "^0.9"

# Multithread iterator support.
rayon = "^1.3"

# Games supported need this to keep the input order.
indexmap = "^1.5"

# SQLite support
rusqlite = "^0.27"

# Compression support.
xz2 = "^0.1"
