[package]
name = "rpfm_error"
version = "1.6.2"
authors = ["Frodo45127 <frodo_gv@hotmail.com>"]
description = "Shared error module for RPFM."
edition = "2018"

[dependencies]
# Dependencies directly used by this module.
directories = "^2.0"
failure = "^0.1"
os_info = "^1.1"
serde = "^1.0"
serde_derive = "^1.0"
toml = "^0.5"
uuid = { version = "^0.7", features = ["v4"] }

# Dependencies with From<X> implementations for their errors in this module.
bincode = "^1.1"
csv = "=1.0.5"
reqwest = "^0.9"
serde-xml-rs = "^0.3"
serde_json = "^1.0"
ron = "^0.5"

# Logging support.
log = "^0.4"

[profile.release]
lto = true
debug = true
