[package]
name = "rpfm_error"
version = "2.4.106"
authors = ["Frodo45127 <frodo_gv@hotmail.com>"]
description = "Shared error module for RPFM."
edition = "2018"

[dependencies]
# Dependencies directly used by this module.
backtrace = "^0.3"
directories = "^3.0"
os_info = "^3.0"
serde = "^1.0"
serde_derive = "^1.0"
toml = "^0.5"
uuid = { version = "^0.8", features = ["v4"] }

# Dependencies with From<X> implementations for their errors in this module.
bincode = "^1.1"
csv = "^1.1"
serde-xml-rs = "^0.4"
serde_json = "^1.0"
ron = "^0.6"
fluent = "^0.13"
fluent-bundle = "^0.13"
fluent-syntax = "^0.10"
log = "^0.4"
git2 = "^0.13"
self_update = "^0.22"
sentry = "^0.21"
