[package]
name = "rpfm_error"
version = "3.0.5"
authors = ["Frodo45127 <frodo_gv@hotmail.com>"]
description = "Shared error module for RPFM."
edition = "2021"
rust-version = "1.56"

[dependencies]
# Dependencies directly used by this module.
serde = "^1.0"
serde_derive = "^1.0"
toml = "^0.5"

# Dependencies with From<X> implementations for their errors in this module.
bincode = "^1.1"
csv = "^1.1"
serde-xml-rs = "^0.5"
quick-xml = { version = "^0.22", features = ["serialize"] }
serde_json = "^1.0"
ron = "^0.7"
fluent = "^0.16"
fluent-bundle = "^0.15"
fluent-syntax = "^0.11"
unic-langid = "^0.9"
git2 = "^0.13"
self_update = "^0.28"

# Logging support.
log = { version = "^0.4", features = ["std"] }

# Config dependencies.
lazy_static = "^1.2"
