[package]
name = "rpfm_extensions"
description = "This crate contains extended functionality (dependencies manager, global search,...) over the `rpfm_lib` crate, meaning stuff that didn't fit in there, it's here."
license = "MIT"
repository = "https://github.com/Frodo45127/rpfm"
categories = ["games"]
keywords = ["totalwar", "modding"]
readme = "README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]

# Internal dependencies.
rpfm_lib = { workspace = true, features = ["integration_log", "integration_assembly_kit", "support_error_bincode"] }

# Basic get/set support.
getset.workspace = true

# Support for advanced iter stuff.
itertools.workspace = true

# Regex support.
regex.workspace = true

# Serialization support.
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
bincode.workspace = true

# Multithread iterator support.
rayon.workspace = true

# Case-insensitive checks.
caseless.workspace = true

# Support for porting back and forward gltf files.
gltf = { version = "^1", features = ["extras"] }
gltf-json = "^1"
#gltf-utils = "^0"

# Serialization of vec -> string values and back.
base64.workspace = true

# Support for open files in a native way.
open.workspace = true
