[package]
name = "rpfm_extensions"
description = "This crate contains extended functionality (dependencies manager, global search,...) over the `rpfm_lib` crate, meaning stuff that didn't fit in there, it's here."
license = "MIT"
repository = "https://github.com/Frodo45127/rpfm"
categories = ["games"]
keywords = ["totalwar", "modding"]
readme = "README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]

# Internal dependencies.
rpfm_lib = { path = "../rpfm_lib", version = "4.7.4", features = ["integration_log", "integration_assembly_kit", "support_error_bincode"] }

# Basic get/set support.
getset = "^0.1"

# Support for advanced iter stuff.
itertools = "^0.14"

# Regex support.
regex = "^1"

# Support for advanced regex stuff (I think, I have to check if I can replace it with the normal regex crate).
fancy-regex = "^0.14"

# Serialization support.
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
bincode = "^1.3"

# Multithread iterator support.
rayon = "^1.3"

# Float equality support.
float_eq = "^1"

# Case-insensitive checks.
caseless = "^0.2"

# Support for porting back and forward gltf files.
gltf = { version = "^1", features = ["extras"] }
gltf-json = "^1"
#gltf-utils = "^0"

# Serialization of vec -> string values and back.
base64 = "^0"
