[package]
name = "rpfm_ipc"
description = "IPC protocol shared between rpfm_ui and rpfm_server."
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
# Internal dependencies.
rpfm_lib = { workspace = true, features = ["integration_git", "integration_assembly_kit", "support_error_bitcode"] }
rpfm_extensions.workspace = true

# Serialization support.
serde.workspace = true
serde_derive.workspace = true

# Multithreaded iterator support.
rayon.workspace = true

# Basic get/set support.
getset.workspace = true

# MCP support.
schemars.workspace = true
