[package]
name = "rpfm_lib"
version = "3.99.99"
authors = ["Frodo45127 <frodo_gv@hotmail.com>"]
description = "Lib with all the common functions and utils used by all the RPFM crates."
edition = "2021"
rust-version = "1.60"

[features]
default = ["integration_sqlite"]

integration_assembly_kit = []
integration_git = ["dep:git2"]
integration_log = ["dep:backtrace", "dep:log", "dep:os_info", "dep:sentry", "dep:simplelog"]
integration_sqlite = ["dep:rusqlite", "dep:r2d2_sqlite", "dep:r2d2"]

support_rigidmodel = []
support_uic = []
support_tip_uploads = []

[dependencies]

# Basic get/set support.
getset = "^0.1"

# Serialization support.
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
csv = "^1.1"
ron = "^0.7"
toml = "^0.5"

# Error handling.
thiserror = "1.0"

# Decoding/Encoding support.
byteorder = "^1.3"
encoding = "^0.2"
bitflags = "^1.0"

# Regex support.
regex = "^1"

# RNG support.
rand = "^0.8"

# Git support.
git2 = { version = "^0.13", optional = true }

# Pelite, because we need it to get the current version of a game's exe, and I have not a fucking clue how to pass a path to WinApi.
pelite = "^0.9"

# Multithread iterator support.
rayon = "^1.3"

# SQLite support
rusqlite = { version = "^0.27", optional = true, features = ["blob", "bundled"] }
r2d2_sqlite = { version = "^0.20", optional = true }
r2d2 = { version = "^0.8", optional = true }

# Compression support.
xz2 = "^0.1"

# Fractions support
fraction = "^0.10"

# UUID Generation support.
uuid = { version = "^1.1", features = ["v4"] }

# Quick char search support.
memchr = "^2.5"

# Float equality support.
float_eq = "^1"

# Logging support.
backtrace = { version = "^0.3", optional = true }
log = { version = "^0.4", optional = true, features = ["std"] }
os_info = { version = "^3.0", optional = true }
sentry = { version = "^0", optional = true, features = ["log"] }
simplelog = { version = "^0.12", optional = true }
