[package]
name = "rpfm_lib"
description = "This crate contains the basic functionality for interacting with Total War files."
license = "MIT"
repository = "https://github.com/Frodo45127/rpfm"
categories = ["games"]
keywords = ["totalwar", "modding"]
readme = "README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["integration_assembly_kit"]

support_error_bincode = ["dep:bincode"]
enable_content_inspector = []

integration_assembly_kit = ["dep:serde-xml-rs"]
integration_git = ["dep:git2"]
integration_log = ["dep:backtrace", "dep:log", "dep:os_info", "dep:sentry", "dep:simplelog"]
integration_sqlite = ["dep:rusqlite", "dep:r2d2_sqlite", "dep:r2d2"]

support_uic = []

[dependencies]

# Basic get/set support.
getset.workspace = true

# Config dependencies.
directories.workspace = true

# Serialization support.
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
serde-xml-rs = { version = "^0.6", optional = true }
csv.workspace = true
ron.workspace = true
toml.workspace = true
bincode = { workspace = true, optional = true }

# Serialization of vec -> string values and back.
base64.workspace = true

# Error handling.
thiserror.workspace = true

# Decoding/Encoding support.
itertools.workspace = true
byteorder = "^1.3"
encoding_rs = "^0.8"
bitflags = { version = "^2.3", features = ["std", "serde"]}

# Regex support.
regex.workspace = true

# RNG support.
rand = "^0.8"

# Checksumming support.
crc-fast = "^1"

# Git support.
git2 = { version = "^0.20", optional = true }

# Pelite, because we need it to get the current version of a game's exe, and I have not a fucking clue how to pass a path to WinApi.
pelite = "^0.10"

# Multithread iterator support.
rayon.workspace = true

# Compression support.
lz4_flex = "^0"
zstd = "^0"
lzma-rs = "^0"

# Fractions support
fraction = "^0.15"

# Case-insensitive checks.
caseless.workspace = true

# UUID Generation support.
uuid = { version = "^1.1", features = ["v4"] }

# Quick char search support.
memchr = "^2.5"

# Float equality support.
float_eq.workspace = true

# Logging support.
backtrace = { version = "^0.3", optional = true }
log = { version = "^0.4", optional = true, features = ["std"] }
os_info = { version = "^3.0", optional = true }
sentry = { version = "^0", optional = true, features = ["log"] }
simplelog = { version = "^0.12", optional = true }

# Support for finding unsupported text files.
content_inspector = { version = "^0.2" }

# Steam Location support.
steamlocate = "2.0.0-beta.0"

# Linear algebra
nalgebra = { version = "^0", features = ["serde-serialize"] }

# SQLite support
rusqlite = { version = "^0.33", optional = true, features = ["blob", "bundled"] }
r2d2_sqlite = { version = "^0.26", optional = true }
r2d2 = { version = "^0.8", optional = true }

# F16 support until it gets into std.
half.workspace = true

# Support for converting dds files to png.
image = "^0.25"
dds = "^0.2"
