[package]
name = "rpfm_logging"
version = "3.0.7"
authors = ["Frodo45127 <frodo_gv@hotmail.com>"]
description = "RPFM Logging Lib. Provides support for logging and error reporting."
edition = "2021"
rust-version = "1.56"

[dependencies]

# Error handling.
thiserror = "^1.0"

# Serialization support.
serde = "^1.0"
serde_derive = "^1.0"
toml = "^0.5"

# Logging support.
backtrace = "^0.3"
os_info = "^3.0"
log = { version = "^0.4", features = ["std"] }
simplelog = "^0.11"
sentry = { version = "^0.25", features = ["log"] }

