[package]
name = "rpfm_mod_checker"
version = "3.0.5"
authors = ["Frodo45127 <frodo_gv@hotmail.com>"]
description = "A simple tool to quickly find out what files are causing your game to be modded."
edition = "2021"
rust-version = "1.56"

[dependencies]
# Internal dependencies.
rpfm_error = { path = "../rpfm_error" }
rpfm_lib = { path = "../rpfm_lib" }

# Support for open files in a native way.
open = "^2.0"

# Windows resources support.
[target.'cfg(windows)'.build-dependencies]
winres = "^0.1"
