[package]
name = "rpfm_ui"
build = "build.rs"
description = "A modding tool for Total War games."
license-file = "../LICENSE"
repository = "https://github.com/Frodo45127/rpfm"
categories = ["games"]
keywords = ["totalwar", "modding"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
strict_subclasses_compilation = []
support_rigidmodel = ["rpfm_lib/support_rigidmodel"]
support_modern_dds = []
support_uic = ["rpfm_lib/support_uic"]
enable_tools = []
only_for_the_brave = []

default = []

[dependencies]

# Internal dependencies.
rpfm_lib = { path = "../rpfm_lib", version = "3.99.118", features = ["integration_log", "integration_git"] }
rpfm_extensions = { path = "../rpfm_extensions", version = "3.99.118" }

# Config dependencies.
directories = "^4.0"
lazy_static = "^1.2"

# Error managing.
anyhow = "1.0"
thiserror = "1.0"

# Basic get/set support.
getset = "^0.1"

# Serialization dependencies.
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
ron = "^0.8"

# Date conversion support.
time = { version = "^0.3", features = ["formatting"] }

# Support for Regex operations.
regex = "^1"

# Support for open files in a native way.
open = "^3"

# Qt dependencies.
cpp_core = "^0.6"
qt_core = "^0.5"
qt_gui = "^0.5"
qt_widgets = "^0.5"
qt_ui_tools = "^0.5"

# Support for formatting math operations.
meval = "^0.2"

# Float equality support.
float_eq = "^1"

# Audio playback support.
rodio = "^0.17"

# Translation support.
fluent = "^0.16"
fluent-bundle = "^0.15"
unic-langid = { version = "^0.9", features = ["unic-langid-macros"] }

# Improved multi-thread Support.
crossbeam = "^0.8" # Maybe replace it with flume?
rayon = "^1.3"

# Better iterator support.
itertools = "^0.10"

# Autoupdate support.
self_update = { version = "^0.36", features = ["archive-zip", "compression-zip-deflate", "compression-zip-bzip2", "compression-flate2"] }
tempfile = "^3.1"
zip-extract = { git = "https://github.com/MCOfficer/zip-extract/", branch = "dependabot/cargo/zip-0.6.4" }
reqwest = "^0.11"

# Windows resources support.
[target.'cfg(windows)'.build-dependencies]
winres = "^0.1"

