[package]
name = "rpfm_ui"
build = "build.rs"
description = "A modding tool for Total War games."
license = "MIT"
repository = "https://github.com/Frodo45127/rpfm"
categories = ["games"]
keywords = ["totalwar", "modding"]
readme = "../README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
strict_subclasses_compilation = []
support_model_renderer = []
support_uic = ["rpfm_lib/support_uic", "rpfm_ui_common/support_uic"]
enable_tools = []
only_for_the_brave = []

default = ["enable_tools"]

[dependencies]

# Internal dependencies.
rpfm_lib = { workspace = true, features = ["integration_log", "integration_git"] }
rpfm_extensions = { workspace = true }
rpfm_ui_common = { workspace = true }
rpfm_ipc = { workspace = true }

# Config dependencies.
directories.workspace = true

# Error managing.
anyhow.workspace = true
thiserror.workspace = true

# Basic get/set support.
getset.workspace = true

# Serialization dependencies.
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
csv.workspace = true

# Date conversion support.
time.workspace = true

# Support for Regex operations.
regex.workspace = true

# Support for open files in a native way.
open.workspace = true

# Qt dependencies.
cpp_core.workspace = true
qt_core.workspace = true
qt_gui.workspace = true
qt_widgets.workspace = true
qt_ui_tools.workspace = true

# Support for formatting math operations.
meval = "^0.2"

# Float equality support.
float_eq.workspace = true

# Audio playback support.
rodio = "^0"

# Improved multi-thread Support.
crossbeam.workspace = true
rayon.workspace = true

# Better iterator support.
itertools.workspace = true

# Folder size calculations.
fs_extra.workspace = true

# Online translation support.
tokio.workspace = true
futures.workspace = true
tokio-tungstenite = "^0.26"

# Autoupdate support.
self_update.workspace = true
reqwest.workspace = true

# Translator libraries.
chat-gpt-lib-rs = "^0"
base64.workspace = true
deepl = "^0"

# Windows resources support.
[target.'cfg(windows)'.build-dependencies]
winres.workspace = true
fs_extra = "^1.3"
