[package]
name = "rpfm_ui_common"
description = "This crate contains basic functionality shared between UI applications using Qt and the RPFM libs."
license = "MIT"
repository = "https://github.com/Frodo45127/rpfm"
categories = ["games"]
keywords = ["totalwar", "modding"]
readme = "README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
support_uic = ["rpfm_lib/support_uic"]

[dependencies]

# Internal dependencies.
rpfm_lib = { workspace = true, features = ["integration_log"] }

# Error managing.
anyhow.workspace = true

# Qt dependencies.
cpp_core.workspace = true
qt_core.workspace = true
qt_gui.workspace = true
qt_widgets.workspace = true
qt_ui_tools.workspace = true

# Date conversion support.
time.workspace = true

# Serialization dependencies.
serde.workspace = true
serde_json.workspace = true

# Basic get/set support.
getset.workspace = true

# Translation support.
fluent-bundle = "^0.15"
unic-langid = { version = "^0.9", features = ["unic-langid-macros"] }
